<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_header"
        android:layout_weight=".35" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".65"
        android:orientation="vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:hint="@string/full_name"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:startIconDrawable="@drawable/ic_usericon"
                app:startIconTint="@color/royal_blue"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:id="@+id/etrname"
                    android:inputType="textPersonName"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:hint="Email Address"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:startIconDrawable="@drawable/ic_emailicon"
                app:startIconTint="@color/royal_blue"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:id="@+id/etremail"
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:hint="@string/phone_number"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:startIconDrawable="@drawable/ic_phoneicon"
                app:startIconTint="@color/royal_blue"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:id="@+id/etrphonenumber"
                    android:inputType="phone"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_passwordicon"
                app:startIconTint="@color/royal_blue"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:id="@+id/etrPass"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:hint="@string/confirm_password"
                app:startIconDrawable="@drawable/ic_passwordicon"
                app:startIconTint="@color/royal_blue"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:id="@+id/etrcPass"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:background="@drawable/rectangular_button"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:id="@+id/btn_register"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/already_register_click_here"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:id="@+id/btn_gotologin"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>