<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnboardingActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/onboarding_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sscreenone" />

    <com.faz.widgets.segmentedprogressbarlibrary.SegmentedProgressBar
        android:id="@+id/pbar"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        app:activeColor="?attr/colorSecondaryVariant"
        app:delimiterColor="?attr/colorOnPrimary"
        app:delimiterSize="4dp"
        app:inactiveColor="@color/royal_blue"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_prompts"
        app:layout_constraintStart_toStartOf="parent"
        app:maxValue="5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="48dp"
        android:gravity="center_horizontal"
        android:padding="2dp"
        android:text="@string/tagline"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_prompts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/onboarding_prompts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:lines="3"
        android:padding="2dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangular_button"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/skip"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>