<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/login_header"
        android:layout_weight=".40" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_weight=".60"
        android:orientation="vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:hint="@string/email_address"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:startIconDrawable="@drawable/ic_emailicon"
                app:startIconTint="@color/royal_blue"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:id="@+id/etemail"
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_passwordicon"
                app:startIconTint="@color/royal_blue"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:id="@+id/etPass"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:background="@drawable/rectangular_button"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Forgot Password"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:padding="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/btn_forgotpassword"/>
            <ImageView
                android:visibility="gone"
                android:padding="5dp"
                android:layout_width="50dp"
                android:id="@+id/btn_googlesingin"
                android:scaleType="centerCrop"
                android:src="@drawable/google_signinpng"
                android:layout_gravity="center_horizontal"
                android:layout_height="50dp"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16sp"
                android:text="New? Register Here"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:id="@+id/btn_gotoregister"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>